<resources>
    <string name="app_name">App_202</string>
    <string name="lan">Java, Kotlin,  Dart, JavaScript, C++, C, Python</string>
    <string name="checkedTextView">Checked Text View</string>
    <string name="xa">Xa</string>
    <string name="chiqishni_xoxlaydsizmi">Chiqishni Xoxlaydsizmi?</string>
    <string name="yo_q">Yo\'q</string>
    <string name="search_web_site">Search Web-Site</string>
    <string name="search">Search</string>
    <string name="click">Click</string>
    <string name="kotlin">Kotlin</string>
    <string name="java">Java</string>
    <string name="checked_text_view">Checked Text View</string>
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="sd">Click</string>
    <string name="red">Red</string>
    <string name="sdfsf">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="sdf">Search</string>
    <string name="sdddsd">Java</string>
    <string name="ff">Kotlin</string>
    <string name="sad">Click</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="android">Android</string>
    <string name="cc">Search</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="single_selection_dialog">Single Selection Dialog</string>
    <string name="multi_selection_dialog">Multi Selection Dialog</string>
    <string name="confirm_dialog">Confirm Dialog</string>
    <string name="full_screen_dialog">Full Screen Dialog</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="horizantal_progress_dialog">Horizantal Progress Dialog</string>
    <string name="go_to_third_activity">GO TO THIRD ACTIVITY</string>
    <string name="horizanta_progress_dialog">qwswq</string>
</resources>