<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/red"
            android:textSize="20sp"
            tools:ignore="DuplicateIds">

            <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdfsf"
            android:textSize="20sp" />

            <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:textSize="20sp"/>

            <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radioYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:textSize="20sp"/>

        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autoTextComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/cc" />

        <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
            android:id="@+id/multiComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:completionThreshold="1"
            android:hint="@string/sdf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lan"
            android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkJava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdddsd"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/checkKotlin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ff"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/checkAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/sad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/sd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextSwitcher
                android:id="@+id/textSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/back"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/next"/>



            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <CheckedTextView
                android:id="@+id/ctv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="true"
                android:drawableStart="@drawable/ic_baseline_notifications_active_24"
                android:drawablePadding="15dp"
                android:gravity="center"
                android:text="@string/checked_text_view"
                android:drawableLeft="@drawable/ic_baseline_notifications_active_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxJava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/main7"
                android:paddingStart="15dp"
                android:text="@string/java"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxKotlin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/main7"
                android:paddingStart="15dp"
                android:text="@string/kotlin"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/checkBtnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/click" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/go_to_second_activity" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>