<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#14B302"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="411dp"
        android:layout_height="734dp"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="2dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/simpleDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/simple_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/singleDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/single_selection_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/multi_selection_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/confirm_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullScreenDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/full_screen_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/progressDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/progress_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/customDialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/custom_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogH"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/progress_dialog"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToActivity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30sp"
            android:text="@string/go_to_third_activity"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>